# zkp-auth

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  Cargo.toml  README.md  client.Dockerfile  docker-compose.yml  package.json  server.Dockerfile
.github/workflows/: ci.yml
auth_service/: Cargo.toml  Dockerfile  README.md  build.rs
auth_service/src/: auth.rs  main.rs  repository.rs
auth_service/src/auth/: error.rs
auth_service/src/repository/: error.rs  in_memory.rs
client/: Cargo.toml
client/src/: main.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
protos/: nillion.proto
router/: Cargo.toml  Dockerfile  README.md
router/src/: auth.rs  main.rs
router/src/auth/: crypto.rs  error.rs
server/: Cargo.toml
server/src/: main.rs
test/: e2e.js
zkp/: Cargo.toml  README.md
zkp/src/: chaum_pedersen.rs  lib.rs
