[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bigos <daniel.bigos@icloud.com>"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
env_logger = { version = "0.10.0" }
log = { version = "0.4.19" }
prost = { version = "0.11.9" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"]}
tonic = { version = "0.9.2" }
zkp = { path = "../zkp" }

[build-dependencies]
tonic-build = { version =  "0.9.2" }
