[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Bigos <daniel.bigos@icloud.com>"]

[dependencies]
prost = { version = "0.11.9" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"]}
tonic = { version = "0.9.2" }

[build-dependencies]
tonic-build = { version =  "0.9.2" }
